Creado mediante Colaboratory

--- a/20220420_Entregable_1_Parte_1_Grupo_31.ipynb
+++ b/20220420_Entregable_1_Parte_1_Grupo_31.ipynb
@@ -40,6 +40,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Grupo 31\n",
+        "**Integrantes:**\n",
+        "\n",
+        "* Victor Nicolas Rocco\n",
+        "* Maria Mercedes Silva\n",
+        "* Santiago Franco\n",
+        "* Williams Gremoliche\n"
+      ],
+      "metadata": {
+        "id": "Bdpsz8ky6Mod"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Xwdfo7z20TUK"
@@ -54,7 +69,7 @@
         "import pandas as pd\n",
         "import seaborn as sns"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +94,7 @@
         "url = 'https://cs.famaf.unc.edu.ar/~mteruel/datasets/diplodatos/sysarmy_survey_2020_processed.csv'\n",
         "df = pd.read_csv(url)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +112,7 @@
         "#Muestro las primeras 5 filas\n",
         "df[:5]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +480,7 @@
         "#imprimo todas las columnas del DF para decidir cuales selecciono en posterior analisis\n",
         "list(df.columns)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +566,7 @@
         "#--- VARIABLES ---\n",
         "relevant_columns = ['tools_programming_languages', 'salary_monthly_NETO', 'salary_monthly_BRUTO']"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +594,7 @@
         "#40\n",
         "df.tools_programming_languages[:25]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +679,7 @@
         "    relevant_columns.append('cured_programming_languages') \n",
         "df.cured_programming_languages[:25]\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +757,7 @@
         "id": "cRgx2aHUA15h",
         "outputId": "705004d1-0289-4387-ff84-3e712f4d337d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +968,7 @@
         "id": "JHukwyjVDyjq",
         "outputId": "0dce4bf2-bf18-4c5d-e0ed-8fccfe027abc"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,7 +1020,7 @@
         "id": "LPzGWCCs5Y2D",
         "outputId": "735429ab-7a9e-4e7f-9018-c9af8bc1c4b5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,7 +1094,7 @@
         },
         "outputId": "77ba9325-59e4-42ac-95fd-de174b0e7e01"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1408,7 +1423,7 @@
         "id": "vmHlIvRPp6dP",
         "outputId": "221764d5-0411-40be-ddd9-3909abdffccf"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1473,7 +1488,7 @@
         "\n",
         "df_lang_count[:10]\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1691,7 +1706,7 @@
         "id": "QgyJpqknSbn9",
         "outputId": "46cc42ec-5f55-40c0-dee0-7f904479fb9e"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1981,7 +1996,7 @@
         "id": "Ilh6EnbWZrDC",
         "outputId": "328cf750-3c26-47a0-950c-a86eee270a8d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2251,7 +2266,7 @@
         "id": "9jPPYjX_xhtJ",
         "outputId": "143c1a5e-74be-404b-bbe8-fecf78bcb663"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2286,7 +2301,7 @@
         "id": "S3GdE23Z2Gnl",
         "outputId": "e1044ced-297c-4e1b-c091-cd6fa4f89133"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2387,7 +2402,7 @@
         "\n",
         "plt.ticklabel_format(style='plain', axis='x')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2471,7 +2486,7 @@
         "id": "HdrAjTT71Olh",
         "outputId": "94c17993-dedb-4719-a6c4-a2c752795f76"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2782,7 +2797,7 @@
         "id": "jOa0kfmWxEae",
         "outputId": "519fbf71-7d1a-48f8-b14d-5acae52ade45"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2833,7 +2848,7 @@
       "metadata": {
         "id": "sAL9DBZS12Vf"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2856,7 +2871,7 @@
         "id": "LcSonKck3KOL",
         "outputId": "2ba66c18-be2c-4435-d945-bb77114605d6"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3342,7 +3357,7 @@
         "id": "rsLzT4cnNkV_",
         "outputId": "e5544745-8a17-46f8-c376-4420bf345d55"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3390,7 +3405,7 @@
         "id": "PtgTpt4Y5cSM",
         "outputId": "f6703cac-9fef-496e-caa6-31fd9f2d9cd5"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
