Creado mediante Colaboratory

--- a/20220419_Entregable_Parte_2.ipynb
+++ b/20220419_Entregable_Parte_2.ipynb
@@ -41,6 +41,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Grupo 31\n",
+        "**Integrantes:**\n",
+        "\n",
+        "* Victor Nicolas Rocco\n",
+        "* Maria Mercedes Silva\n",
+        "* Santiago Franco\n",
+        "* Williams Gremoliche"
+      ],
+      "metadata": {
+        "id": "sdGq6INB7yWQ"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Xwdfo7z20TUK"
