Creado mediante Colaboratory

--- a/04_05_22_entregable_parte_1_22.ipynb
+++ b/04_05_22_entregable_parte_1_22.ipynb
@@ -7776,7 +7776,7 @@
       "cell_type": "markdown",
       "source": [
         "#**Variables que puedan servir para combinar las tablas**\n",
-        "1.- **Conjunto de Latitud y longitud**, esta serían adecuadas porque nos dan una posición relativa de proximidad para traer datos a convinar como City o neighborhood.\n",
+        "1.- **Conjunto de Latitud y longitud**, esta serían adecuadas porque nos dan una posición relativa de proximidad para traer datos a convinar como City o neighborhood. A partir del ingreso de una latitud y longitud podemos utilizar Geopy para analizar por cercanía y devolver el precio promedio por m2 de las casas cercanas.\n",
         "\n",
         "2.- **Dirección**, esta no sería adecuada ya que en la tabla de Airbnb las direciones no tienen altura y una misma calle puede pertenecer a varios barrios o CP  \n"
       ],
@@ -7963,7 +7963,7 @@
       "version": "3.8.8"
     },
     "colab": {
-      "name": "03.05.22.entregable_parte_1_22.ipynb",
+      "name": "04.05.22.entregable_parte_1_22.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
